fix: position nav icons above note header if they are overlapping
We do this because being unable to navigate is worse than being
unable to see.

This is also an example of prioritizing song listeners over song
creators, which is our policy whenever their needs come in conflict.

--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -618,6 +618,7 @@ a.twitter-timeline {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: var(--z-nav-icons);
 }
 .controls-icon > button {
   border: none;
