--- a/site/public/css/base.css
+++ b/site/public/css/base.css
@@ -126,6 +126,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: var(--z-nav-icons);
 }
 .nav-icon > button {
   border: none;
